@@ -1,5 +1,10 @@
 2007-02-09  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/sanitcheck.py: sanity checks for cvs, svn and git
+	(the right one, not the GNU Interactive Tools) (closes: #348268)
+
+2007-02-09  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-2.18.modules: libgnomecups now depends on
 	gnome-common (closes #364853)
 
